# oura-mcp-gateway

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00 - Documentation Index.md  01 - Getting Started.md  01 - Setup and Authentication.md  02 - Authentication.md  02 - System Design.md  03 - API Routes.md  03 - Configuration.md  04 - Architecture.md  04 - Data Model.md  05 - Configuration and Security.md  05 - Oura Upstream Map.md  06 - API V1 Contract.md  06 - Development.md  07 - Data Contract.md  08 - Dedicated Oura Workbook Contract.md  09 - Web Consumer Handoff.md  10 - Development.md  11 - Implementation Plan.md  README.md  architecture.md  authentication.md  configuration.md  data-contract.md  development.md  getting-started.md  implementation-plan.md  mcp-tools.md  oura-data-contract-v2.md  oura-v2-migration.md  sheet-contract.md  web-consumer-handoff.md
docs/development/: testing.md
docs/guides/: authentication.md  codex.md  configuration.md  getting-started.md  google-sheets.md
docs/operations/: migration-v2.md
docs/reference/: architecture.md  data-contract-v2.md  mcp-tools.md
integrations/codex/oura-sync/: SKILL.md
integrations/codex/oura-sync/agents/: openai.yaml
integrations/codex/oura-sync/references/: local-config.example.md  sheet-contract.md
scripts/: __init__.py  audit_distribution.py  export_v2_staging.py
src/oura_data_api/: __init__.py  __main__.py  auth.py  auth_models.py  config.py  distribution_audit.py  errors.py  oauth_cli.py
src/oura_data_api/analytics/: __init__.py  _primitives.py  daily.py  models.py  weekly.py
src/oura_data_api/api/: __init__.py  app.py  cursors.py  dependencies.py  errors.py  models.py  routes.py
src/oura_data_api/fixtures/: README.md  daily_activity.json  daily_readiness.json  daily_resilience.json  daily_sleep.json  daily_spo2.json  daily_stress.json  session.json  sleep.json  workout.json
src/oura_data_api/provider/: __init__.py  client.py  models.py  registry.py
src/oura_data_api/services/: __init__.py  mapping.py  service.py
src/oura_mcp/: __init__.py  auth.py  client.py  config.py  distribution_audit.py  errors.py  export_security.py  models.py  normalize.py  oauth_cli.py  planning.py  server.py  service.py  sheet_contract.py  transform.py
src/oura_mcp/fixtures/: daily_activity.json  daily_resilience.json  daily_sleep.json  sleep.json
tests/: conftest.py  test_analytics_regressions.py  test_api_contract.py  test_application_service.py  test_auth.py  test_client.py  test_config.py  test_daily_signals.py  test_distribution_audit.py  test_export_v2_staging.py  test_handoff_examples.py  test_mcp_contract.py  test_oauth_cli.py  test_oura_resources.py  test_oura_transport.py  test_planning.py  test_repository_layout.py  test_runtime.py  test_service_and_normalize.py  test_sheet_contract.py  test_transform.py  test_weekly_trends.py
